@@ -804,7 +804,7 @@ function browseAddCategories(view, item, isGenre) {
     }
     cat = { title: i18n("All Songs"),
             command: ["tracks"],
-            params: [item.id, TRACK_TAGS+"elcy", SORT_KEY+"albumtrack"],
+            params: [item.id, trackTags()+"elcy", SORT_KEY+"albumtrack"],
             icon: "music_note",
             type: "group",
             id: ALL_SONGS_ID};
@@ -1162,7 +1162,7 @@ function browseItemAction(view, act, item, index, event) {
     } else if (act==GOTO_ARTIST_ACTION) {
         view.fetchItems(view.replaceCommandTerms({command:["albums"], params:["artist_id:"+item.artist_id, ARTIST_ALBUM_TAGS, SORT_KEY+ARTIST_ALBUM_SORT_PLACEHOLDER]}), {cancache:false, id:"artist_id:"+item.artist_id, title:item.id.startsWith("album_id:") ? item.subtitle : item.artist, stdItem:STD_ITEM_ARTIST});
     } else if (act==GOTO_ALBUM_ACTION) {
-        view.fetchItems({command:["tracks"], params:["album_id:"+item.album_id, TRACK_TAGS, SORT_KEY+"tracknum"]}, {cancache:false, id:"album_id:"+item.album_id, title:item.album, stdItem:STD_ITEM_ALBUM});
+        view.fetchItems({command:["tracks"], params:["album_id:"+item.album_id, trackTags(), SORT_KEY+"tracknum"]}, {cancache:false, id:"album_id:"+item.album_id, title:item.album, stdItem:STD_ITEM_ALBUM});
     } else if (ADD_TO_PLAYLIST_ACTION==act) {
         bus.$emit('dlg.open', 'addtoplaylist', [item], [browseBuildCommand(view, item)]);
     } else if (REMOVE_DUPES_ACTION==act) {
@@ -1627,7 +1627,7 @@ function browseBuildCommand(view, item, commandName, doReplacements) {
             if (canReplace && c.length==1 && mode) {
                 if (mode=="tracks") {
                     if (!hasTags) {
-                        p.push(TRACK_TAGS);
+                        p.push(trackTags());
                     }
                     if (!hasSort) {
                         p.push(SORT_KEY+"tracknum");
